fixing layout issues

--- a/public/src/app/app.component.css
+++ b/public/src/app/app.component.css
@@ -4,6 +4,7 @@
   width: 100vw;
   overflow: hidden;
   max-width: 100vw;
+  margin: 0;
 }
 
 
