--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -2,6 +2,8 @@
 
 html {
   box-sizing: border-box;
+  margin: 0;
+  max-width: 100vw;
 }
 
 *,
